--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //library for coordinator layout
-    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
-
     //viewpager dependency
     implementation "androidx.viewpager:viewpager:1.0.0"
 
+    //bottomNavigation
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
